# iml2023

./: .gitignore  README.md  pyproject.toml
Task1a/: main.ipynb
Task1b/: main.ipynb  results.csv  template_solution.py
Task2/: results.csv  template_solution.py  tester.py
Task3/: results.txt  template_solution.py
Task4/: results.csv  template_solution.py
