[tool.poetry]
name = "iml2023"
version = "0.1.0"
description = ""
authors = ["Daniel Steinhauser <dsteinhauser2002@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.21.3"
numpy = "^1.24.2"
pandas = "^1.5.3"
torch = "^2.0.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
seaborn = "^0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
